# procedural-programming

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pon.circ
contr/: HEADER_ns.h  n1.cpp  n2.cpp  n3.cpp  n4.cpp  n5.cpp
domashka/: HEADER_zads.h  yes_no.cpp  zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad19.cpp  zad2.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad23.cpp  zad24.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad28.cpp  zad29.cpp  zad3.cpp  zad30.cpp  zad31.cpp  zad32.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
domashka/algs/: bubblesort.cpp  heapsort.cpp  quicksort.cpp
domashka/txt_files/: 0.txt
ikbo/: index.cpp  matrix_2.txt  roman.cpp  roman.txt  sort_algs.cpp  test.txt  validator.cpp  zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad19.cpp  zad2.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad23.cpp  zad24.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad28.cpp  zad29.cpp  zad3.cpp  zad30.cpp  zad31.cpp  zad32.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp  zads.h
test-progs/: a.out  double_type_input.cpp  double_type_input.h  dti.cpp  index.cpp  test.txt  test0.cpp  zad1.cpp  zad1.h  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad4.h  zad5.cpp  zad5.h  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp  zads.h
