cmake_minimum_required(VERSION 3.20)
project(procedural_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(procedural_programming
        test-progs/zads.h test-progs/index.cpp test-progs/zad1.cpp test-progs/zad2.cpp test-progs/dti.cpp test-progs/zad3.cpp test-progs/zad4.cpp test-progs/zad5.cpp test-progs/zad6.cpp test-progs/zad7.cpp test-progs/zad8.cpp test-progs/zad9.cpp test-progs/zad10.cpp test-progs/zad11.cpp test-progs/zad12.cpp test-progs/zad13.cpp test-progs/zad14.cpp test-progs/zad15.cpp test-progs/zad16.cpp test-progs/zad17.cpp test-progs/zad18.cpp)
