cmake_minimum_required(VERSION 3.20)
project(procedural_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(procedural_programming
        ikbo/zads.h ikbo/index.cpp ikbo/zad1.cpp ikbo/zad2.cpp ikbo/validator.cpp ikbo/zad3.cpp ikbo/zad4.cpp ikbo/zad5.cpp ikbo/zad6.cpp ikbo/zad7.cpp ikbo/zad8.cpp ikbo/zad9.cpp ikbo/zad10.cpp ikbo/zad11.cpp ikbo/zad12.cpp ikbo/zad13.cpp ikbo/zad14.cpp ikbo/zad15.cpp ikbo/zad16.cpp ikbo/zad17.cpp ikbo/zad18.cpp ikbo/zad25.cpp ikbo/zad26.cpp ikbo/zad19.cpp ikbo/zad20.cpp ikbo/zad27.cpp ikbo/zad28.cpp ikbo/zad21.cpp ikbo/zad22.cpp ikbo/sort_algs.cpp ikbo/roman.cpp ikbo/zad23.cpp ikbo/zad24.cpp)
