cmake_minimum_required(VERSION 3.20)
project(procedural_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(procedural_programming
        domashka/HEADER_zads.h main.cpp domashka/zad1.cpp domashka/zad2.cpp domashka/zad3.cpp domashka/zad4.cpp domashka/zad5.cpp domashka/zad6.cpp domashka/zad7.cpp domashka/zad8.cpp domashka/zad9.cpp domashka/zad10.cpp domashka/zad11.cpp domashka/zad12.cpp domashka/zad13.cpp domashka/zad14.cpp domashka/zad15.cpp domashka/zad16.cpp domashka/zad17.cpp domashka/zad18.cpp domashka/zad25.cpp domashka/zad26.cpp domashka/zad19.cpp domashka/zad20.cpp domashka/zad27.cpp domashka/zad28.cpp domashka/zad21.cpp domashka/zad22.cpp domashka/algs/bubblesort.cpp domashka/zad23.cpp domashka/zad24.cpp domashka/zad29.cpp domashka/zad30.cpp domashka/zad31.cpp domashka/zad32.cpp domashka/algs/heapsort.cpp domashka/algs/quicksort.cpp contr/n1.cpp contr/n2.cpp contr/n3.cpp contr/n4.cpp contr/n5.cpp domashka/yes_no.cpp contr/HEADER_ns.h)
